--- a/eindopdracht-huishoudboekje/package.json
+++ b/eindopdracht-huishoudboekje/package.json
@@ -13,6 +13,7 @@
     "next": "15.4.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-select": "^5.10.2",
     "zod": "^4.0.10"
   },
   "devDependencies": {
