--- a/eindopdracht-huishoudboekje/package.json
+++ b/eindopdracht-huishoudboekje/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "firebase": "^12.0.0",
